# dwg2pdf

./: .gitignore  .pre-commit-config.yaml  README.md  config.yml  dotenv-sample  pyproject.toml  python-exe.yml  states.json  windows_exe.spec
.github/workflows/: python-exe.yml
dwg_converter/: __init__.py  __main__.py  config.py  extractor.py
