[tool.poetry]
name = "dwg_converter"
version = "0.9.5"
description = "convert DWG into PDF using QCAD Pro dwg2pdf"
authors = ["GOTO Satoru <satoru.goto@cognite.com>"]

[tool.black]
line-length = 120
target-version = "py311"
include = '\.py$'

[tool.poetry.dependencies]
python = "~3.11"
cognite-extractor-utils = "^7.5.9"
arrow = "^1.3.0"
pandas = "^2.2.3"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.5.0"
macholib = {version = "^1.14", platform = "darwin"}
pywin32-ctypes = {version = "^0.2.0", platform = "win32"}
pefile = "^2023.2.7"

[tool.poetry.scripts]
dwg_converter = "dwg_converter.__main__:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.pyinstaller]
hidden-imports = ["dwg_converter"]
